# SocializationApp

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/chat/: controller.rs  index.rs  mod.rs  model.rs  server.rs  session.rs
src/comment/: controller.rs  index.rs  mod.rs  model.rs  service.rs
src/database/: db.rs  mod.rs  redis.rs
src/middleware/: auth.rs  error_handler.rs  mod.rs  not_found.rs
src/post/: mod.rs  post_controller.rs  post_index.rs  post_model.rs  post_service.rs
src/router/: index.rs
src/uploader/: controller.rs  index.rs  mod.rs
src/user/: controller.rs  index.rs  mod.rs  model.rs  service.rs
src/utils/: email.rs  error.rs  hashing.rs  helpers.rs  mod.rs  model.rs  password_validation.rs  uploads.rs
