[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
chrono = "0.4.42"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
mongodb = "3.3.0"
regex = "1.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
cargo-watch = "8"
