[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
mongodb = "3.3.0"
regex = "1.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "pool"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha1 = "0.10"
actix-multipart = "0.7"
futures-util = "0.3"
rand = "0.9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
actix = "0.13"
actix-web-actors = "4.3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
cargo-watch = "8"
